- packages 최신화 - vitest config 수정 - Readme 수정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-3rd-chapter-1",
+  "name": "front-5th-chapter2-1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,11 +15,11 @@
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@vitest/ui": "^2.1.1",
-    "jsdom": "^25.0.0",
-    "vite": "^5.1.0",
-    "vitest": "^2.1.1"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitest/ui": "^3.1.1",
+    "jsdom": "^26.0.0",
+    "vite": "^6.2.6",
+    "vitest": "^3.1.1"
   }
 }
