--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
     "@vitest/ui": "^3.1.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "jsdom": "^26.0.0",
+    "prettier": "^3.5.3",
+    "typescript-eslint": "^8.30.1",
     "vite": "^6.2.6",
     "vitest": "^3.1.1"
   }
